<resources>
    <string name="app_name">Furniplan</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="term_of_service">By signing up, you confirm that you agree to our Terms Of Service
and have read and understood our Privacy Policy</string>

    ///login//
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Lupa kata Sandi?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="buat_akun">Buat akun</string>
    <string name="login">Login</string>

    //get_started//

    <string name="get">Dapatkan Furniture Impianmu!</string>

    ///user_profile//

    <string name="profile">Profile</string>
    <string name="akmal">Alfian Akmal</string>

    ///edit_profile///

    <string name="update">Update Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="search">Pencarian</string>
    <string name="Produk">Search Product Name</string>

    ///Search//
    <string name="terakhirkali">Terakhir Dicari</string>
    <string name="Lampu">Lampu LED</string>
    <string name="Kitchen">Kitchen Set</string>
    <string name="Meja">Meja Dapur</string>


    //Search_progress///
    <string name="Search">Search</string>
    <string name="lem">Lem</string>
    <string name="saran">Saran Pencarian</string>
    <string name="Lemari_baju">Lemari Baju</string>
    <string name="Lemari_nakas">Lemari Nakas</string>
    <string name="Lemari_MultiFungsi">Lemari MultiFungsi</string>
    <string name="title_activity_custom">CustomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home">Home</string>
    <string name="custom">Custom</string>
    <string name="tagline_custom">Custom Furnituremu Sekarang Juga!</string>
    <string name="custom_disini">Custom Disini</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- item clicked -->
    <string name="message">%1$s diklik!</string>


</resources>