<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_furniplan" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/email"
        android:textColor="@color/abu"
        app:layout_constraintStart_toStartOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/labelEmail"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/labelKataSandi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kata_sandi"
        android:textColor="@color/abu"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/formPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape"
        android:ems="10"
        android:hint="@string/kata_sandi"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="@+id/labelKataSandi"
        app:layout_constraintTop_toBottomOf="@+id/labelKataSandi" />

    <TextView
        android:id="@+id/linkForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lupa_kata_sandi"
        app:layout_constraintStart_toStartOf="@+id/formPassword"
        app:layout_constraintTop_toBottomOf="@+id/formPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="@+id/formPassword"
        app:layout_constraintStart_toStartOf="@+id/linkForgotPassword"
        app:layout_constraintTop_toBottomOf="@+id/linkForgotPassword" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/belum_punya_akun"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/textViewBelumPunyaAkun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/buat_akun"
        android:textColor="@color/primary_blue"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>