<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/vector" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/nunito_semibold"
        android:text="@string/Search"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11" />

    <EditText
        android:id="@+id/editTextText7"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/pencaraian_progress"
        android:ems="10"
        android:inputType="text"
        android:text="@string/lem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText7"
        app:layout_constraintEnd_toEndOf="@+id/editTextText7"
        app:layout_constraintTop_toTopOf="@+id/editTextText7"
        app:srcCompat="@drawable/search_btn" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/saran"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText7"
        app:layout_constraintTop_toBottomOf="@+id/editTextText7" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/textView24"
        app:layout_constraintTop_toBottomOf="@+id/textView24"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/Lemari_baju"
        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
        app:layout_constraintStart_toEndOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="@+id/imageView19" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/imageView19"
        app:layout_constraintTop_toBottomOf="@+id/imageView19"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/Lemari_nakas"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/imageView21"
        app:layout_constraintTop_toBottomOf="@+id/imageView21"
        app:srcCompat="@drawable/search" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/dm_sans_medium"
        android:text="@string/Lemari_MultiFungsi"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22" />


</androidx.constraintlayout.widget.ConstraintLayout>