<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_get_started"
    >


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="logo furniplan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_furniplan" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"

        android:fontFamily="@font/nunito_semibold"
        android:text="@string/get"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="204dp"
        android:text="@string/sign_up"
        android:backgroundTint="@color/primary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary_blue"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@+id/btnSignup"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup" />

</androidx.constraintlayout.widget.ConstraintLayout>